tests/NormalTests/paczka1/fuzzy1/68490105.err
Error in line 7: 82DwAWi S609 84,4
Error in line 3: hap A456 63,2
Error in line 1: ekP6rav A619 83,2
Error in line 10: hap A619 34,7
Error in line 17: q8eoD A643 5,4
Error in line 34: hap A619 12,35
Error in line 31: hap A643 52,0
